--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>fr.paris.lutece.plugins</groupId>
     <artifactId>library-lutece-unit-testing-common</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.1-SNAPSHOT</version>
     <name>Common library for unit testing for Lutece</name>
     <description>Common classes for Lutece unit test library and lutece core</description>
 
@@ -44,7 +44,7 @@
         <connection>scm:git:https://github.com/lutece-platform/lutece-test-library-lutece-unit-testing-common.git</connection>
         <developerConnection>scm:git:https://github.com/lutece-platform/lutece-test-library-lutece-unit-testing-common.git</developerConnection>
         <url>https://github.com/lutece-platform/lutece-test-library-lutece-unit-testing-common.git</url>
-      <tag>library-lutece-unit-testing-common-1.0.0</tag>
+      <tag>HEAD</tag>
   </scm>
 
 </project>
